se agrega nuevas modificaciones
la aplicacion funcionando sin base de datos